# takumi

./: .coderabbit.yaml  Cargo.toml  README.md  biome.json  lefthook.yml  package.json  test_color_parsing.rs
.changeset/: afraid-aliens-send.md  afraid-toys-crash.md  all-turtles-dance.md  beige-brooms-jog.md  breezy-clowns-dream.md  breezy-shoes-flow.md  bright-knives-attack.md  brown-poets-behave.md  busy-regions-clean.md  chilly-donuts-raise.md  chubby-apples-bathe.md  curvy-forks-smash.md  curvy-peas-take.md  cute-pants-dream.md  dark-bees-spend.md  dark-things-watch.md  dirty-adults-unite.md  easy-grapes-swim.md  eight-corners-cross.md  eighty-actors-cut.md  eighty-bars-smoke.md  eighty-bees-wait.md  fair-badgers-smash.md  fair-tables-build.md  famous-times-notice.md  fast-masks-talk.md  fifty-coins-sit.md  fifty-regions-hang.md  four-kids-call.md  four-signs-open.md  fuzzy-rivers-learn.md  gentle-lizards-cry.md  gold-flies-own.md  happy-ideas-act.md  hungry-results-hide.md  hungry-squids-grow.md  icy-glasses-doubt.md  kind-groups-dress.md  late-planes-share.md  lazy-cheetahs-dress.md  (+60 more)
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: ci.yml  mirror.yml
docs/: .gitignore  package.json  source.config.ts  vite.config.ts
docs/app/: app.css  root.tsx  source.ts
docs/app/components/: accordion.tsx  image-editor.tsx  search.tsx  type-table.tsx
docs/app/data/: showcase.ts
docs/app/docs/: og.tsx  page.tsx  search.ts
docs/app/playground/: default.tsx  options.ts  schema.ts  worker.ts
docs/app/routes/: home.tsx  playground.tsx  showcase.tsx  sitemap.ts
docs/components/: search.tsx
docs/content/docs/: index.mdx  load-images.mdx  measure-api.mdx  meta.json  performance-and-optimization.mdx  reference.mdx  tailwind-css.mdx  troubleshooting.mdx  typography-and-fonts.mdx
docs/lib/: remote-assets.ts
example/cloudflare-workers/: package.json
example/ffplay/: package.json
example/nextjs/: README.md  package.json
example/satori-html/: README.md  index.ts  package.json
example/tanstack-start/: package.json
example/twitter-images/: index.tsx  package.json
takumi/: CHANGELOG.md  Cargo.toml  README.md  package.json  release.sh
takumi-helpers/: CHANGELOG.md  package.json
takumi-helpers/src/: helpers.ts  types.ts
takumi-image-response/: CHANGELOG.md  README.md  package.json
takumi-image-response/tests/: node.test.tsx  wasm.test.tsx
takumi-napi-core/: .gitignore  CHANGELOG.md  Cargo.toml  package.json
takumi-napi-core/src/: dts-header.d.ts  lib.rs  load_font_task.rs  measure_task.rs  put_persistent_image_task.rs  render_animation_task.rs  render_task.rs  renderer.rs
takumi-napi-core/tests/: deserialize-error.test.ts  measure.test.ts  render.test.ts
takumi-napi-core/tests/bench/: index.ts  index.tsx
takumi-server/: Cargo.toml
takumi-server/src/: generate_image.rs  lib.rs
takumi-server/tests/: generate_image_tests.rs  main_tests.rs
takumi-template/: CHANGELOG.md  package.json
takumi-wasm/: CHANGELOG.md  Cargo.toml  package.json
takumi-wasm/bundlers/: node.cjs  node.d.ts  node.mjs
takumi-wasm/src/: lib.rs  renderer.rs
takumi-wasm/tests/: deserialize-error.test.ts  measure.test.ts  render.test.ts
takumi/src/: error.rs  lib.rs
takumi/src/layout/: inline.rs  mod.rs  tree.rs  viewport.rs
takumi/src/layout/node/: container.rs  image.rs  mod.rs  text.rs
takumi/src/layout/style/: mod.rs  stylesheets.rs
takumi/src/layout/style/properties/: aspect_ratio.rs  background.rs  background_image.rs  background_position.rs  background_repeat.rs  background_size.rs  blend_mode.rs  border.rs  box_shadow.rs  clip_path.rs  color.rs  conic_gradient.rs  filter.rs  flex.rs  flex_grow.rs  font_feature_settings.rs  font_style.rs  font_synthesis.rs  font_variation_settings.rs  font_weight.rs  gap.rs  gradient_utils.rs  length.rs  length_unit.rs  line_clamp.rs  line_height.rs  linear_gradient.rs  mod.rs  noise_v1.rs  overflow.rs  overflow_wrap.rs  percentage_number.rs  radial_gradient.rs  scale.rs  sides.rs  space_pair.rs  text_decoration.rs  text_overflow.rs  text_shadow.rs  text_stroke.rs  (+6 more)
takumi/src/layout/style/properties/grid/: grid_auto_flow.rs  grid_length.rs  grid_length_unit.rs  grid_line.rs  grid_min_max_size.rs  grid_placement.rs  grid_repeat_track.rs  grid_repetition_count.rs  grid_template_areas.rs  grid_template_component.rs  grid_track_size.rs  mod.rs
takumi/src/layout/style/tw/: map.rs  mod.rs  parser.rs
takumi/src/rendering/: background_drawing.rs  blend.rs  canvas.rs  debug_drawing.rs  image_drawing.rs  inline_drawing.rs  mod.rs  render.rs  text_drawing.rs  write.rs
takumi/src/rendering/components/: blur.rs  border.rs  mod.rs  shadow.rs
takumi/src/resources/: font.rs  image.rs  mod.rs  task.rs
takumi/tests/: fixtures.rs  fixtures_animation.rs  fixtures_inline.rs  fixtures_style_alignment.rs  fixtures_style_background_clip.rs  fixtures_style_background_image.rs  fixtures_style_clip_path.rs  fixtures_style_filter.rs  fixtures_style_layout.rs  fixtures_style_mask_image.rs  fixtures_style_object_fit.rs  fixtures_style_object_position.rs  fixtures_style_opacity.rs  fixtures_style_overflow.rs  fixtures_style_padding.rs  fixtures_style_position.rs  fixtures_style_sizing.rs  fixtures_style_spacing.rs  fixtures_style_text_decoration.rs  fixtures_style_transform.rs  fixtures_style_visuals.rs  fixtures_svg.rs  fixtures_text.rs  font_tests.rs  measure_tests.rs  test_utils.rs
takumi/tests/fixtures/: animation.rs  color_artifacts.rs  inline.rs  inline_vertical_align.rs  style_alignment.rs  style_backdrop_filter.rs  style_background_clip.rs  style_background_image.rs  style_clip_path.rs  style_filter.rs  style_layout.rs  style_mask_image.rs  style_mix_blend_mode.rs  style_object_fit.rs  style_object_position.rs  style_opacity.rs  style_overflow.rs  style_padding.rs  style_position.rs  style_sizing.rs  style_spacing.rs  style_text_decoration.rs  style_text_decoration_thickness.rs  style_transform.rs  style_visuals.rs  svg.rs  text.rs
(+69 files in other folders)
