[workspace]
resolver = "3"
members = [
  "takumi",
  "takumi-server",
  "takumi-napi-core",
  "takumi-wasm",
  "example/rust",
]

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1

# there's some color artifacts issues with zune-image decoder, we have to use a pinned version on dev branch. 
[patch.crates-io.zune-core]
git = "https://github.com/etemesi254/zune-image"

[patch.crates-io.zune-jpeg]
git = "https://github.com/etemesi254/zune-image"
