[package]
name = "takumi-napi-core"
version = "0.0.0"
publish = false
edition = "2024"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
rayon = "1.10"
serde = "1.0"

[dependencies.xxhash-rust]
version = "0.8"
features = ["xxh3", "std"]

[dependencies.takumi]
path = "../takumi"
features = ["woff2", "woff", "svg", "rayon", "detailed_css_error"]
default-features = false

[dependencies.napi]
version = "3"
default-features = false
features = ["napi4", "serde-json"]

[dependencies.napi-derive]
version = "3"

[build-dependencies]
napi-build = "2"
