[package]
name = "takumi"
version = "0.68.8"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Render your React components to images."
keywords = ["react", "image", "css", "flexbox"]
repository = "https://github.com/kane50613/takumi"
homepage = "https://takumi.kane.tw"
readme = "README.md"
rust-version = "1.89"

[dependencies]
bitflags = "2.11"
cssparser = "0.36"
derive_builder = "0.20"
image-webp = "0.2"
png = "0.18"
data-url = "0.3"
dashmap = "6.1"
color = "0.3"
thiserror = "2.0"
wide = "1.1"
unicode-linebreak = "0.1"
libm = "0.2"

[dependencies.zeno]
version = "0.3"
default-features = false
features = ["libm", "eval"]

[dependencies.xxhash-rust]
version = "0.8"
features = ["xxh3"]

[dependencies.fast_image_resize]
version = "6.0"
features = ["only_u8x4", "image"]

[dependencies.phf]
version = "0.13"
features = ["macros"]

[dependencies.smallvec]
version = "1.15"
features = ["serde"]

[dependencies.parley]
version = "0.7"
default-features = false
features = ["libm"]

[dependencies.swash]
version = "0.2"
default-features = false
features = ["libm", "scale"]

[dependencies.rayon]
version = "1.10"
optional = true

[dependencies.wuff]
version = "0.2"
optional = true

[dependencies.taffy]
version = "0.9"
default-features = false
features = [
  "flexbox",
  "grid",
  "alloc",
  "calc",
  "taffy_tree",
  "strict_provenance",
  "block_layout",
]

[dependencies.serde]
version = "1"
features = ["derive", "rc"]

[dependencies.image]
default-features = false
version = "0.25"
features = ["jpeg", "png", "webp"]

[dependencies.resvg]
version = "0.47"
default-features = false
optional = true

[features]
default = ["woff2", "woff", "svg", "rayon", "detailed_css_error"]
svg = ["dep:resvg"]
woff2 = ["dep:wuff", "wuff/brotli"]
woff = ["dep:wuff", "wuff/z"]
rayon = ["dep:rayon", "fast_image_resize/rayon"]
detailed_css_error = []

[dev-dependencies]
serde_json = "1"
